# OpenScanner

./: README.md  build.gradle  settings.gradle
3rdpart/opencv/java/src/org/opencv/imgproc/: Imgproc.java
3rdpart/zbar/: build.gradle
3rdpart/zbar/src/main/: AndroidManifest.xml
3rdpart/zbar/src/main/cpp/: CMakeLists.txt  zbarjni.c
3rdpart/zbar/src/main/cpp/libiconv-1.15/: config.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_picker.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
camerax-ktx/: build.gradle
camerax-ktx/src/main/: AndroidManifest.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
data/: build.gradle
engine-czxing/: build.gradle
engine-czxing/src/main/: AndroidManifest.xml
engine-hwscankit/: build.gradle
engine-hwscankit/src/main/: AndroidManifest.xml
engine-mlkit/: build.gradle
engine-mlkit/src/main/: AndroidManifest.xml
engine-wechat/: build.gradle
engine-wechat-ncnn/src/main/: AndroidManifest.xml
engine-wechat-ncnn/src/main/cpp/: CMakeLists.txt
engine-wechat-ncnn/src/main/cpp/include/opencv2/: wechat_qrcode.hpp
engine-wechat-ncnn/src/main/cpp/wechat_qrcode_ncnn/: binarizermgr.cpp  wechat_qrcode.cpp
engine-wechat-ncnn/src/main/cpp/wechat_qrcode_ncnn/detector/: align.cpp  align.hpp  ssd_detector.cpp
engine-wechat-ncnn/src/main/cpp/wechat_qrcode_ncnn/scale/: super_scale.hpp
engine-wechat/src/main/cpp/: CMakeLists.txt
engine-wechat/src/main/cpp/wechat_engine/: wechat_engine.cpp  wechat_engine.hpp  wechat_engine_jni.cpp  wechat_helper.h
engine-wechat/src/main/cpp/wechat_qrcode/zxing/common/: stringutils.cpp
engine-zbar/: build.gradle
engine-zxing/: build.gradle
engine/engine-hwscankit/: build.gradle
engine/engine-hwscankit/src/main/: AndroidManifest.xml
engine/engine-mlkit/: build.gradle
engine/engine-wechat-ncnn/: build.gradle
engine/engine-wechat-ncnn/src/main/cpp/: CMakeLists.txt
engine/engine-wechat-ncnn/src/main/cpp/wechat_engine_ncnn/: wechat_engine.cpp  wechat_engine.hpp  wechat_engine_jni.cpp
engine/engine-wechat-ncnn/src/main/cpp/wechat_qrcode_ncnn/: binarizermgr.hpp  decodermgr.cpp  decodermgr.hpp  imgsource.cpp  imgsource.hpp
engine/engine-wechat/src/main/: AndroidManifest.xml
engine/engine-wechat/src/main/cpp/: CMakeLists.txt
engine/engine-wechat/src/main/cpp/wechat_engine/: wechat_engine.cpp
engine/engine-zbar/: build.gradle
engine/engine-zbar/src/main/: AndroidManifest.xml
engine/engine-zxing/: build.gradle
engine/engine-zxing/src/main/: AndroidManifest.xml
flow/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
ktx/camerax-ktx/: build.gradle
scanner-camerax-ktx/: build.gradle
scanner-camerax-ktx/src/main/: AndroidManifest.xml
ui/: build.gradle
ui/src/main/: AndroidManifest.xml
yuvutils/: build.gradle
yuvutils/src/main/: AndroidManifest.xml
yuvutils/src/main/cpp/: CMakeLists.txt
yuvutils/src/main/cpp/yuvutils/: YuvConvert.h  yuvutils.cpp  yuvutils.h
(+123 files in other folders)
